# carla-drive

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: KodRehberi.md
src/carla_drive/common/: dataset_bc.py  logging.py  utils.py
src/carla_drive/feature/: dataset_bc.py  sensors.py
tests/unit/: test_sensors_import.py  test_sensors_rgb_callback_shape.py  test_sensors_rgb_config.py  test_smoke_import.py  test_utils.py
