[project]
name = "carla-drive"
version = "0.1.0"
description = "FTI-based PyTorch + CARLA project (bootstrap)"
authors = [
    {name = "Bertan Ulusoy",email = "bertan_ulusoy@yahoo.com"},
    {name = "Ömer Tuğrul Gürbüz", email="otugrul2012@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26.4,<2.0.0",
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "tensorboard>=2.18.0",
  "hydra-core>=1.3.2",
  "pydantic-settings>=2.5.0",
  "structlog>=24.1.0",
  # Opsiyonel: plot/analysis ihtiyacı olursa aç
  # "matplotlib>=3.9.0",
  # "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.13.0",
  "ruff>=0.7.0",
  "pre-commit>=4.0.1",
  "mkdocs-material>=9.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "carla: tests that require a running CARLA server (skipped in CI)"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["carla_drive"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
